<resources>
    <string name="app_name">zhihu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_notification">通知</string>
    <string name="action_about">关于</string>
    <string name="drawer_user_name">伤经纪业</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_change_theme">切换主题</string>
    <string name="drawer_home">首页</string>
    <string name="drawer_explore">发现</string>
    <string name="drawer_follow">关注</string>
    <string name="drawer_collect">收藏</string>
    <string name="drawer_roundtable">圆桌</string>
    <string name="drawer_chat">私信</string>
</resources>
